@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2025 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,13 +19,10 @@ package org.jkiss.dbeaver.ext.cubrid.edit;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBException;
-import org.jkiss.dbeaver.ext.cubrid.model.CubridPartition;
-import org.jkiss.dbeaver.ext.cubrid.model.CubridTable;
-import org.jkiss.dbeaver.ext.cubrid.model.CubridTableColumn;
+import org.jkiss.dbeaver.ext.cubrid.model.*;
 import org.jkiss.dbeaver.ext.generic.edit.GenericTableManager;
 import org.jkiss.dbeaver.ext.generic.model.GenericTableBase;
 import org.jkiss.dbeaver.ext.generic.model.GenericTableForeignKey;
-import org.jkiss.dbeaver.ext.generic.model.GenericTableIndex;
 import org.jkiss.dbeaver.ext.generic.model.GenericUniqueKey;
 import org.jkiss.dbeaver.model.DBPDataKind;
 import org.jkiss.dbeaver.model.edit.DBECommandContext;
@@ -42,13 +39,20 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 
-public class CubridTableManager extends GenericTableManager implements DBEObjectRenamer<GenericTableBase>
-{
+public class CubridTableManager extends GenericTableManager implements DBEObjectRenamer<GenericTableBase> {
     private static final Class<? extends DBSObject>[] CHILD_TYPES = CommonUtils.array(
-            CubridTableColumn.class,
-            GenericUniqueKey.class,
-            GenericTableForeignKey.class,
-            GenericTableIndex.class);
+        CubridTableColumn.class,
+        GenericUniqueKey.class,
+        GenericTableForeignKey.class,
+        CubridTableIndex.class
+    );
+
+    @Override
+    public boolean canCreateObject(@NotNull Object container) {
+        CubridUser user = (CubridUser) container;
+        CubridDataSource dataSource = (CubridDataSource) user.getDataSource();
+        return !dataSource.isShard();
+    }
 
     @NotNull
     @Override
@@ -58,7 +62,11 @@ public class CubridTableManager extends GenericTableManager implements DBEObject
 
     @Nullable
     @Override
-    public Collection<? extends DBSObject> getChildObjects(DBRProgressMonitor monitor, GenericTableBase object, Class<? extends DBSObject> childType) throws DBException {
+    public Collection<? extends DBSObject> getChildObjects(
+        DBRProgressMonitor monitor,
+        GenericTableBase object,
+        Class<? extends DBSObject> childType
+    ) throws DBException {
         if (childType == CubridTableColumn.class) {
             return object.getAttributes(monitor);
         }
@@ -67,8 +75,8 @@ public class CubridTableManager extends GenericTableManager implements DBEObject
 
     public void appendPartition(DBRProgressMonitor monitor, StringBuilder query, CubridTable table) throws DBException {
         List<CubridPartition> partitions = table.getPartitions(monitor);
-        String type = partitions.get(0).getTableType().toUpperCase();
-        String key = partitions.get(0).getExpression();
+        String type = partitions.getFirst().getTableType().toUpperCase();
+        String key = partitions.getFirst().getExpression();
         CubridTableColumn column = (CubridTableColumn) table.getAttribute(monitor, key);
 
         query.append(String.format("PARTITION BY %s (%s)", type, key));
@@ -104,15 +112,16 @@ public class CubridTableManager extends GenericTableManager implements DBEObject
 
     @Override
     protected void addObjectModifyActions(
-            @NotNull DBRProgressMonitor monitor,
-            @NotNull DBCExecutionContext executionContext,
-            @NotNull List<DBEPersistAction> actionList,
-            @NotNull ObjectChangeCommand command,
-            @NotNull Map<String, Object> options) throws DBException {
+        @NotNull DBRProgressMonitor monitor,
+        @NotNull DBCExecutionContext executionContext,
+        @NotNull List<DBEPersistAction> actionList,
+        @NotNull ObjectChangeCommand command,
+        @NotNull Map<String, Object> options
+    ) throws DBException {
         if (command.getProperties().size() > 1 || command.getProperty("schema") == null) {
             CubridTable table = (CubridTable) command.getObject();
             StringBuilder query = new StringBuilder("ALTER TABLE ");
-            query.append(table.getContainer() + "." + table.getName());
+            query.append(table.getContainer()).append(".").append(table.getName());
             appendTableModifiers(monitor, table, command, query, true, options);
             actionList.add(new SQLDatabasePersistAction(query.toString()));
         }
@@ -120,12 +129,13 @@ public class CubridTableManager extends GenericTableManager implements DBEObject
 
     @Override
     protected void appendTableModifiers(
-            @NotNull DBRProgressMonitor monitor,
-            @NotNull GenericTableBase genericTable,
-            @NotNull NestedObjectCommand command,
-            @NotNull StringBuilder query,
-            @NotNull boolean alter,
-            @NotNull Map<String, Object> options) throws DBException {
+        @NotNull DBRProgressMonitor monitor,
+        @NotNull GenericTableBase genericTable,
+        @NotNull NestedObjectCommand command,
+        @NotNull StringBuilder query,
+        boolean alter,
+        @NotNull Map<String, Object> options
+    ) throws DBException {
         CubridTable table = (CubridTable) genericTable;
         String delimiter = getDelimiter(options);
         String suffix = alter ? "," : delimiter;
@@ -137,7 +147,8 @@ public class CubridTableManager extends GenericTableManager implements DBEObject
                 query.append(table.isReuseOID() ? "REUSE_OID" + suffix : "");
             }
         }
-        if ((!alter && table.getCollation().getName() != null) || (command.getProperty("charset") != null || command.getProperty("collation") != null)) {
+        if ((!alter && table.getCollation().getName() != null) || (command.getProperty("charset") != null
+            || command.getProperty("collation") != null)) {
             query.append("COLLATE ").append(table.getCollation().getName()).append(suffix);
         }
         if ((!alter || command.getProperty("autoIncrement") != null) && table.getAutoIncrement() > 0) {
@@ -157,41 +168,62 @@ public class CubridTableManager extends GenericTableManager implements DBEObject
 
     @Override
     protected void addObjectExtraActions(
-            @NotNull DBRProgressMonitor monitor,
-            @NotNull DBCExecutionContext executionContext,
-            @NotNull List<DBEPersistAction> actions,
-            @NotNull NestedObjectCommand<GenericTableBase, PropertyHandler> command,
-            @NotNull Map<String, Object> options) {
+        @NotNull DBRProgressMonitor monitor,
+        @NotNull DBCExecutionContext executionContext,
+        @NotNull List<DBEPersistAction> actions,
+        @NotNull NestedObjectCommand<GenericTableBase, PropertyHandler> command,
+        @NotNull Map<String, Object> options
+    ) {
         CubridTable table = (CubridTable) command.getObject();
         if (table.isPersisted() && table.getContainer() != table.getSchema()) {
             actions.add(
-                    new SQLDatabasePersistAction(
-                            "Change Owner",
-                            "ALTER TABLE " + table.getContainer() + "." + table.getName() + " OWNER TO " + table.getSchema()));
+                new SQLDatabasePersistAction(
+                    "Change Owner",
+                    "ALTER TABLE " + table.getContainer() + "." + table.getName() + " OWNER TO " + table.getSchema()
+                ));
         }
     }
 
     @Override
     protected void addObjectRenameActions(
-            @NotNull DBRProgressMonitor monitor,
-            @NotNull DBCExecutionContext executionContext,
-            @NotNull List<DBEPersistAction> actions,
-            @NotNull ObjectRenameCommand command,
-            @NotNull Map<String, Object> options) {
+        @NotNull DBRProgressMonitor monitor,
+        @NotNull DBCExecutionContext executionContext,
+        @NotNull List<DBEPersistAction> actions,
+        @NotNull ObjectRenameCommand command,
+        @NotNull Map<String, Object> options
+    ) {
         CubridTable table = (CubridTable) command.getObject();
         actions.add(
-                new SQLDatabasePersistAction(
-                        "Rename table",
-                        "RENAME TABLE " + table.getContainer() + "." + command.getOldName() + " TO " + command.getNewName()));
+            new SQLDatabasePersistAction(
+                "Rename table",
+                "RENAME TABLE " + table.getContainer() + "." + command.getOldName() + " TO " + command.getNewName()
+            ));
     }
 
     @Override
     public void renameObject(
-            @NotNull DBECommandContext commandContext,
-            @NotNull GenericTableBase object,
-            @NotNull Map<String, Object> options,
-            @NotNull String newName)
-            throws DBException {
-        processObjectRename(commandContext, object, options, newName);
+        @NotNull DBECommandContext commandContext,
+        @NotNull GenericTableBase object,
+        @NotNull Map<String, Object> options,
+        @NotNull String newName
+    ) throws DBException {
+        if (!((CubridDataSource) object.getDataSource()).isShard()) {
+            processObjectRename(commandContext, object, options, newName);
+        }
+    }
+
+    @Override
+    public boolean canRenameObject(GenericTableBase object) {
+        return !((CubridDataSource) object.getDataSource()).isShard();
+    }
+
+    @Override
+    public boolean canEditObject(GenericTableBase object) {
+        return !((CubridDataSource) object.getDataSource()).isShard();
+    }
+
+    @Override
+    public boolean canDeleteObject(GenericTableBase object) {
+        return !((CubridDataSource) object.getDataSource()).isShard();
     }
 }
